<?xml version="1.0"?>
<package format="2">
  <name>tof_ros</name>
  <version>0.1.0</version>
  <description>ROS1 node receiving TMF8829 ToF sensor data via UDP and publishing to ROS topics</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
</package>
